--- a/src/assets/a.css
+++ b/src/assets/a.css
@@ -1,3 +1,14 @@
 body {
     background: #fff;
 }
+#index {
+    display: flex;
+    width: 100px;
+    transition: width .3s;
+    border:1px solid #ccc;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5)
+}
+
+#index li {
+    flex: 1;
+}
